--- a/ImaP1.ui
+++ b/ImaP1.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Image To PDF Converter App</string>
+   <string>File Format Converter</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -186,23 +186,13 @@ border-radius: 20px;</string>
          <property name="verticalSpacing">
           <number>0</number>
          </property>
-         <item row="1" column="0" colspan="2">
-          <widget class="QListWidget" name="listWidget">
-           <property name="toolTip">
-            <string>Items</string>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">border: 2px solid rgb(0,20,32);</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_8">
            <property name="styleSheet">
             <string notr="true"/>
            </property>
            <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;List of Items :&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;List Of Files :&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
          </item>
@@ -260,7 +250,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(0,83,122);
+background-color: rgb(0, 35, 107);
 border: 1px solid rgb(5,5,5);
 border-radius: 6px;
 
@@ -317,7 +307,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(0, 116, 56);
+background-color: rgb(0, 102, 0);
 border: 1px solid rgb(5,5,5);
 border-radius: 6px;
 
@@ -335,6 +325,16 @@ border-radius: 6px;
             </widget>
            </item>
           </layout>
+         </item>
+         <item row="1" column="0" colspan="2">
+          <widget class="QListWidget" name="listWidget">
+           <property name="toolTip">
+            <string>Items</string>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border: 2px solid rgb(0,20,32);</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
@@ -395,7 +395,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(161, 18, 16);
+background-color: rgb(181, 0, 0);
 border-color: rgb(5,5,5);
 border-style: solid;
 border-width: 1px;
@@ -450,7 +450,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(161, 18, 16);
+background-color: rgb(181, 0, 0);
 border-color: rgb(5,5,5);
 border-style: solid;
 border-width: 1px;
@@ -683,7 +683,7 @@ border-radius:5px;
           <item>
            <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Rohan Godbole, Ashish Moghe, Chinmay Pawaskar, Soham Pathre&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Rohan Godbole, Ashish Moghe, Chinmay Puranik, Soham Pathre&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
            </widget>
           </item>
@@ -786,7 +786,7 @@ border-radius:5px;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;License&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;License&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Copyright (c) 2022&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8.25pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &amp;quot;Software&amp;quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:&lt;/span&gt;&lt;/p&gt;
