--- a/UIFiles/Main_Ui_File.ui
+++ b/UIFiles/Main_Ui_File.ui
@@ -324,7 +324,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(0, 102, 0);
+background-color: rgb(58, 146, 0);
 border: 1px solid rgb(5,5,5);
 border-radius: 6px;
 
@@ -527,7 +527,7 @@ QPushButton::hover{
 
 
 
-background-color: rgb(129, 53, 129);
+background-color: rgb(255, 55, 75);
 border-color: rgb(1, 1, 1);
 border-style: solid;
 border-width: 1px;
@@ -536,7 +536,7 @@ border-radius:5px;
 </string>
            </property>
            <property name="text">
-            <string> Make PDF</string>
+            <string>IMG TO PDF</string>
            </property>
            <property name="icon">
             <iconset>
@@ -571,7 +571,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(52, 52, 111);
+background-color: rgb(51, 78, 255);
 border-color: rgb(1, 1, 1);
 border-style: solid;
 border-width: 1px;
@@ -580,7 +580,7 @@ border-radius:5px;
 </string>
            </property>
            <property name="text">
-            <string> Make PDF</string>
+            <string>DOC TO PDF</string>
            </property>
            <property name="icon">
             <iconset>
@@ -615,7 +615,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(173, 0, 86);
+background-color: rgb(35, 194, 7);
 border-color: rgb(1, 1, 1);
 border-style: solid;
 border-width: 1px;
@@ -624,7 +624,7 @@ border-radius:5px;
 </string>
            </property>
            <property name="text">
-            <string> Make PDF</string>
+            <string> Make PDF3</string>
            </property>
            <property name="icon">
             <iconset>
@@ -659,7 +659,7 @@ QPushButton::hover{
 };
 
 
-background-color: rgb(48, 0, 144);
+background-color: rgb(193, 69, 255);
 border-color: rgb(1, 1, 1);
 border-style: solid;
 border-width: 1px;
@@ -668,7 +668,7 @@ border-radius:5px;
 </string>
            </property>
            <property name="text">
-            <string> Make PDF</string>
+            <string> Make PDF4</string>
            </property>
            <property name="icon">
             <iconset>
