--- a/UIFiles/Main_Ui_File.ui
+++ b/UIFiles/Main_Ui_File.ui
@@ -260,18 +260,19 @@ border-radius: 20px;</string>
              </property>
              <property name="styleSheet">
               <string notr="true">
-
 QPushButton::hover{
 	
-	background-color: rgb(13, 68, 92);
-	border: 1px solid rgb(3,3,93);
+	background-color: rgb(0, 68, 52);
+	border-color: rgb(7, 106, 38);
+	border-style: solid;
+	border-width: 3px;
 	border-radius: 6px;
 	
 };
 
 
-background-color: rgb(0, 35, 107);
-border: 2px solid rgb(3,3,93);
+background-color: rgb(7, 106, 38);
+
 border-radius: 6px;
 
 
@@ -320,15 +321,15 @@ border-radius: 6px;
 
 QPushButton::hover{
 	
-	background-color: rgb(13, 68, 92);
-	border: 1px solid rgb(3,3,93);
+	background-color: rgb(0, 68, 52);
+	border: 3px solid rgb(7, 106, 38);
 	border-radius: 6px;
 	
 };
 
 
-background-color: rgb(0, 35, 107);
-border: 2px solid rgb(3,3,93);
+background-color: rgb(7, 106, 38);
+
 border-radius: 6px;
 
 
@@ -348,6 +349,11 @@ border-radius: 6px;
          </item>
          <item row="1" column="0" colspan="2">
           <widget class="QListWidget" name="listWidget">
+           <property name="font">
+            <font>
+             <pointsize>12</pointsize>
+            </font>
+           </property>
            <property name="toolTip">
             <string>Items</string>
            </property>
@@ -513,7 +519,7 @@ border-radius:4px;
            <property name="minimumSize">
             <size>
              <width>190</width>
-             <height>43</height>
+             <height>50</height>
             </size>
            </property>
            <property name="maximumSize">
@@ -532,12 +538,16 @@ border-radius:4px;
             <string notr="true">
 QPushButton::hover{
 	
-	background-color: rgb(39, 55, 94);
+	background-color: rgb(49, 49, 142);
+	border-color: rgb(1, 1, 1);
+	border-style: solid;
+	border-width: 3px;
+	border-radius:7px;
 };
 
 
 
-background-color: rgb(19, 45, 84);
+background-color: rgb(47, 47, 137);
 border-color: rgb(1, 1, 1);
 border-style: solid;
 border-width: 1px;
@@ -558,7 +568,7 @@ border-radius:5px;
            <property name="minimumSize">
             <size>
              <width>190</width>
-             <height>43</height>
+             <height>50</height>
             </size>
            </property>
            <property name="maximumSize">
@@ -577,12 +587,16 @@ border-radius:5px;
             <string notr="true">
 QPushButton::hover{
 	
-	background-color: rgb(39, 55, 94);
+	background-color: rgb(49, 49, 142);
+	border-color: rgb(1, 1, 1);
+	border-style: solid;
+	border-width: 3px;
+	border-radius:7px;
 };
 
 
 
-background-color: rgb(19, 45, 84);
+background-color: rgb(47, 47, 137);
 border-color: rgb(1, 1, 1);
 border-style: solid;
 border-width: 1px;
@@ -590,7 +604,7 @@ border-radius:5px;
 </string>
            </property>
            <property name="text">
-            <string>DOC TO PDF</string>
+            <string>DOCX TO PDF</string>
            </property>
            <property name="icon">
             <iconset>
@@ -603,7 +617,7 @@ border-radius:5px;
            <property name="minimumSize">
             <size>
              <width>190</width>
-             <height>43</height>
+             <height>50</height>
             </size>
            </property>
            <property name="maximumSize">
@@ -622,12 +636,16 @@ border-radius:5px;
             <string notr="true">
 QPushButton::hover{
 	
-	background-color: rgb(39, 55, 94);
+	background-color: rgb(49, 49, 142);
+	border-color: rgb(1, 1, 1);
+	border-style: solid;
+	border-width: 3px;
+	border-radius:7px;
 };
 
 
 
-background-color: rgb(19, 45, 84);
+background-color: rgb(47, 47, 137);
 border-color: rgb(1, 1, 1);
 border-style: solid;
 border-width: 1px;
@@ -635,52 +653,7 @@ border-radius:5px;
 </string>
            </property>
            <property name="text">
-            <string> Make PDF3</string>
-           </property>
-           <property name="icon">
-            <iconset>
-             <normaloff>icons/export_pdf_50px.png</normaloff>icons/export_pdf_50px.png</iconset>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_make_pdf_4">
-           <property name="minimumSize">
-            <size>
-             <width>190</width>
-             <height>43</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>200</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <family>MS Sans Serif</family>
-             <pointsize>12</pointsize>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">
-QPushButton::hover{
-	
-	background-color: rgb(39, 55, 94);
-};
-
-
-
-background-color: rgb(19, 45, 84);
-border-color: rgb(1, 1, 1);
-border-style: solid;
-border-width: 1px;
-border-radius:5px;
-</string>
-           </property>
-           <property name="text">
-            <string> Make PDF4</string>
+            <string>PDF TO DOCX</string>
            </property>
            <property name="icon">
             <iconset>
@@ -721,7 +694,7 @@ border-radius:5px;
           </item>
          </layout>
         </item>
-        <item row="3" column="0">
+        <item row="2" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
            <widget class="QLabel" name="label_7">
@@ -743,43 +716,6 @@ border-radius:5px;
          </layout>
         </item>
         <item row="1" column="0">
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <item>
-           <widget class="QLabel" name="label_5">
-            <property name="minimumSize">
-             <size>
-              <width>81</width>
-              <height>16</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Contact Info:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_6">
-            <property name="minimumSize">
-             <size>
-              <width>191</width>
-              <height>16</height>
-             </size>
-            </property>
-            <property name="font">
-             <font>
-              <pointsize>10</pointsize>
-              <weight>75</weight>
-              <bold>true</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;&amp;lt;emails&amp;gt;&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item row="2" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <property name="spacing">
            <number>283</number>
@@ -812,7 +748,7 @@ border-radius:5px;
              </size>
             </property>
             <property name="text">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Python 3.10, PyQt5, PILLOW (PIL).&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Python 3.10, PyQt5, PILLOW (PIL), PDF2DOCX, DOCX2PDF.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
            </widget>
           </item>
